--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,9 +1,9 @@
 .homepageContainer {
-  background-color: white; /* 設定背景顏色為白色 */
-  color: black; /* 設定文字顏色為黑色 */
+  background-color: white; 
+  color: black; 
 }
 
 .homepageContainer input {
-  background-color: white; /* 設定輸入框背景顏色為白色 */
-  color: black; /* 設定輸入框文字顏色為黑色 */
+  background-color: white; 
+  color: black;
 }
